...
  "authenticate_title_new": "Please enter your new PIN",
  "buy_peercoin": "Purchase Peercoin",
  "buy_peercoin_dialog_title": "You will now be forwarded to a third party website.",
  "buy_peercoin_dialog_content": "The maintainers of this app are not responsible for its content.",
  "changelog_appbar": "Changelog",
  "changelog_headline": "What's new?",
  "continue": "Continue",
  "currency_AED": "United Arab Emirates Dirham",
  "currency_AFN": "Afghan Afghani",
  "currency_ALL": "Albanian Lek",
  "currency_AMD": "Armenian Dram",
  "currency_ANG": "Netherlands Antillean Guilder",
  "currency_AOA": "Angolan Kwanza",
...
  "tx_retry_snack": "Broadcasting has been retried. If it was successful, the transaction will update in a bit.",
  "unconfirmed": "unconfirmed",
  "wallet_bottom_nav_addr": "Addresses",
  "wallet_bottom_nav_receive": "Receive",
  "wallet_bottom_nav_send": "Send",
  "wallet_bottom_nav_tx": "Transactions",
  "wallet_connected": "connected",
  "wallet_offline": "offline",
  "wallet_pop_menu_paperwallet": "Sweep Paper Wallet",
  "wallet_pop_menu_wif": "Import Private Key",
  "wallet_pop_menu_signing": "Sign Messages",
  "wallet_pop_menu_signing_transactions": "Sign Transaction",
  "wallet_pop_menu_servers": "Adjust Servers",
...
